# QtProjects

./: .gitignore  t.py
Builder/: CMakeLists.txt
Builder/Builder/: Builder.pro  CreateLogoForm.h  createcustqbuildform.cpp  createdatasourceform.cpp  createdatasourceform.h  createdatasourceform.ui  createdocfamilyform.cpp  createdocfamilyform.h  createdocfamilyform.ui  createdocgroupsform.cpp  createdocgroupsform.h  createdocgroupsform.ui  createextfuncform.cpp  createextfuncform.h  createextfuncform.ui  creategroupform.cpp  creategroupform.h  creategroupform.ui  creategroupscreenform.cpp  creategroupscreenform.h  creategroupscreenform.ui  createlistform.cpp  createlistform.h  createlistform.ui  createlogoform.cpp  createlogoform.h  createlogoform.ui  createmenuform.cpp  createmenuform.h  createmenuform.ui  createqueryform.cpp  createqueryform.h  createqueryform.ui  createquestionform.ui  createscrbuilderform.ui  createscreeform.cpp  createscreeform.h  createscreeform.ui  createsecurityfilterform.cpp  (+26 more)
CMake pack/: CMakeLists.txt  Xcode.icls  lambdas.txt
CMake pack/Project with librarys/: CMakeLists.txt
CMake pack/Project with librarys/Exe/: CMakeLists.txt
CMake pack/Project with librarys/Lib/: CMakeLists.txt
CMake pack/Project with librarys/Lib/info/: generate_product_version.cmake
CMakeWidgets/: CMakeLists.txt  res.qrc  widget.cpp  widget.h  widget.ui
CMakeWidgets/cmake/: DeployQt5.cmake
CMakeWidgets/pict/: logo.rc
CMakeWidgets/scripts/: CMakeWidgets.desktop  CMakeWidgets.sh  DeployQt.sh  qt.conf
CaesarCipher/: CMakeLists.txt  main.cpp
Color Schemes/: Ocean light.icls  Xcode new.icls  xcode light.icls
CommandPrompt/: CMakeLists.txt
Factorial/: CMakeLists.txt  main.cpp
FibonacciSequence/: CMakeLists.txt  main.cpp
JobAccounting/: CMakeLists.txt
MusicCatalogue/: Music.qml  MusicCatalogue.pro  Viewer.qml  main.cpp  main.qml  qml.qrc
MusicList/: ControlBox.qml  FontItem.qml  MainPage.qml  MenuItems.qml  MenuPage.qml  Music.qml  MusicList.pro  main.cpp  main.qml  qml.qrc
QBuilder/: CMakeLists.txt
QImageWiever/: .gitignore  CMakeLists.txt  ImageScene.cpp  ImageScene.h  TODO.txt  infodialog.cpp  infodialog.h  infodialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
QImageWiever/cmake/: DeployQt5.cmake
QImageWiever/pict/: logo.rc
QImageWiever/scripts/: DeployQt.bat  QImageViewer.desktop  QImageViewer.sh  QImageWiever.desktop
QMLDinamicPages/: main.qml
QMLDrag/: MainPage.qml  MainPageForm.ui.qml  main.qml  qml.qrc
QMLNetwork/: Page1Form.ui.qml  QMLNetwork.pro  ServiceFunctions.js  main.cpp  main.qml  qml.qrc
QMLSolarSystem/: SolarSystem.pro  main.qml  qml.qrc
QMLSwipeListView/: main.qml
QZiper/: CMakeLists.txt  Compress.qml  ExtractArc.qml  QZiper.pro  appcore.cpp  appcore.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  quazip.cmake  zlib.cmake
QZiper/quazip-Qt5/: CMakeLists.txt
QZiper/quazip-Qt5/quazip/: CMakeLists.txt  CMakeLists.txt.new  UpgradeLog.htm  quazip.sln  quazip.vcxproj
QZiper/quazip-Qt5/quazip/zlib/: CMakeLists.txt
QZiper/quazip-Qt5/quazip/zlib/Tests/: zlib.exp
QZiperTest/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
QmlDialogs/: CustomButton.qml  DialogPage.qml  ImageView.qml  ImageViewForm.ui.qml  MainPage.qml  MainView.qml  MainViewForm.ui.qml  QmlDialogs.pro  main.cpp  main.qml  qml.qrc
QmlTest/: CMakeLists.txt  appcore.cpp  appcore.h  main.cpp  main.qml
QmlUITest/: HomePage.qml  HomePageForm.ui.qml  main.qml  qml.qrc
QtArc/: CMakeLists.txt
QtArc/QArchive/: CMakeLists.txt
QtArc/QArchive/examples/create_archive/: main.cpp
QtArc/QArchive/examples/extract_interrupt/: main.cpp
QtArc/QArchive/examples/extract_to/: main.cpp
QtArc/QArchive/examples/extraction/: main.cpp
QtArc/QArchive/examples/read_archive/: main.cpp
QtArc/QArchive/include/: QArchive.hpp
QtArc/QArchive/libarchive/: CMakeLists.txt
QtArc/QArchive/libarchive/doc/html/: archive_entry_paths.3.html  archive_entry_stat.3.html  archive_read.3.html  archive_read_free.3.html  archive_read_header.3.html  archive_read_new.3.html  archive_read_open.3.html  archive_util.3.html  archive_write_filter.3.html  archive_write_finish_entry.3.html  archive_write_format.3.html  archive_write_free.3.html  archive_write_header.3.html  archive_write_new.3.html  archive_write_open.3.html  archive_write_set_passphrase.3.html  bsdcpio.1.html  bsdtar.1.html  cpio.5.html  libarchive-formats.5.html  libarchive_changes.3.html
QtArc/QtArc/: Archive.cpp  Archive.h  CMakeLists.txt  CMakeLists.txt.old  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
ReverseString/: CMakeLists.txt  main.cpp
RussianConsole/: CMakeLists.txt  main.cpp
Screaner/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintscene.cpp  paintscene.h  res.qrc
SearchAlgorithms/: CMakeLists.txt  main.cpp
Snowfall/: Snowfall.pro  main.cpp  main.qml  qml.qrc
SortingAlgorithms/: CMakeLists.txt  main.cpp
SystemCare/: ActionsArea.qml  ControlBox.qml  ControlElement.qml  MainArea.qml  MainMenu.qml  MenuButton.qml  MenuWindow.qml  ProtectionArea.qml  QuickArea.qml  SimpleButton.qml  SimpleItem.qml  SystemCare.pro  TextLink.qml  ToolsArea.qml  main.cpp  main.qml  qml.qrc
Test/: CMakeLists.txt
Test/Sum/: CMakeLists.txt  main.cpp  sum.pro  sum_widget.cpp  sum_widget.h  sum_widget.ui
Test/Sum/scripts/: ProjectName.desktop
Test/Summery/: CMakeLists.txt  Summery.pro  summery.cpp  summery.h  summery_global.h
Test/Summery/info/: VersionResource.rc  generate_product_version.cmake
Test/scripts/: Sum.desktop
Tests/: CMakeLists.txt  MyClass.h  Run_tests.bat  Run_tests.sh
Tests/Test1/: CMakeLists.txt  Test_MyClass.cpp
Tests/Test2/: CMakeLists.txt  Test_MyClass.cpp  Test_MyClass.h
Tests/Test3/: CMakeLists.txt  main.cpp
VBeltDrive/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc_res.cpp  res.qrc
VBeltDrive/cmake/: DeployQt5.cmake
VBeltDrive/info/: VersionResource.rc
VBeltDrive/pict/: logo.rc
VBeltDrive/scripts/: VBeltDrive.desktop  VBeltDrive.sh
(+233 files in other folders)
